Добавил поддержку баннеров
